# bazel-poc

./: BUILD.bazel  WORKSPACE  go.mod  script.sh
s1/: BUILD.bazel  config.go  go.mod
s1/cmd/: BUILD.bazel  main.go
s2/s3/: BUILD.bazel  config.go  go.mod
s2/s3/cmd/: BUILD.bazel  main.go
shared/: BUILD.bazel  config.go  go.mod
